Make numbers stop jumping on tutorial

--- a/src/components/TutorialFinalStep.css
+++ b/src/components/TutorialFinalStep.css
@@ -25,7 +25,7 @@
   width: 50%;
   height: 100%;
   background: #e4afb3ff;
-  padding: 0 10%;
+  padding: 0 11%;
   row-gap: 25px;
   display: flex;
   flex-direction: column;
